<resources>
    <string name="app_name">Movie App</string>
    <string name="contentDescription">This is poster for The Movie</string>
    <string name="title">Title : </string>
    <string name="over_view">OverView : </string>
    <string name="rate">Rate : </string>
    <string name="release_date">Release Date : </string>
    <string name="popular">Popular</string>
    <string name="vote">Highest Rate </string>
    <string name="contentDescription_ratebar">This is Rate for The Movie  </string>
    <string name="review">Review : </string>
    <string name="no_review">This Movie has No Review </string>
    <string name="author">Author :</string>
    <string name="fav">Favorite</string>
    <string name="home">Home</string>
    <string name="add_fav">Added To Favorite</string>
    <string name="delete_fav">Deleted From Favorite</string>
    <string name="added_before">Had been Added before</string>
    <string name="empty">You Don"'"t have Favorite Movie Yet</string>
</resources>
