<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Activites.Favorite">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/im_background_fav"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/google_certification" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="12dp"
            android:elevation="16dp"
            app:cardElevation="@dimen/margin_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/im_background_fav">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground">

                <ImageView
                    android:id="@+id/im_poster_details_fav"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/contentDescription"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


                <TextView
                    android:id="@+id/title_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/im_poster_details_fav"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title" />

                <RatingBar
                    android:id="@+id/rate_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/contentDescription_ratebar"
                    android:numStars="5"
                    android:progressDrawable="@drawable/ic_star_rate"
                    android:stepSize="0.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/im_poster_details_fav"
                    app:layout_constraintTop_toBottomOf="@+id/date_fav"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/rate_fav"
                    android:layout_width="53dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="48dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/rate_bar"
                    tools:text="@string/rate" />

                <TextView
                    android:id="@+id/date_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/release_date"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintStart_toEndOf="@+id/im_poster_details_fav"
                    app:layout_constraintTop_toBottomOf="@+id/title_fav" />

                <ImageView
                    android:id="@+id/im_delete"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/ic_favorite_black_24dp" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/tv_over_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/over_view"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/over_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_over_fav"
            tools:text="@string/over_view" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>